# SCA25-NVIDIA-Quantum-Workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
Anyon-IHPC/: Dockerfile  README.md  anyon-ihpc.sh
Anyon-IHPC/anyon_2q_CZ/: parameters.json
Anyon-IHPC/anyon_2q_iSWAP/: parameters.json
Anyon-IHPC/anyon_4q_CZ/: parameters.json
Anyon-IHPC/demo/: test_cir_bell.py
Anyon-SDT/: Dockerfile  QAOA_CudaQ.ipynb  QAOA_PennyLane.ipynb  README.md  anyon-sdt.sh  requirements.txt
Anyon-SDT/src_cudaq/: __init__.py  circuits.py  fourier.py  optimizer.py  qaoa_converter.py
Anyon-SDT/src_pennylane/: __init__.py  circuits.py  optimizer.py  qaoa_converter.py
HSBC/: README.md
HSBC/bilevel_portfolio_optimisation-main/: README.md  portfolio_optimisation.ipynb
Pawsey/: Dockerfile  Dockerfile_nvhpc  Makefile  Pawsey.sh  workshop_utils.py
Pawsey/pawsey_test/: Benchmarking_example.ipynb  CUDAQ_example.ipynb  Makefile
QuEra/: Dockerfile  bloqade_aquila.ipynb  braket_aquila.ipynb  cudaq_aquila.ipynb  kirin_bloqade.ipynb  quEra.sh
Quantinuum/: Dockerfile  Quantinuum.sh  README.md  qpe_cudaq.ipynb  qpe_cudaq_iceberg.ipynb  qpe_cudaq_iceberg_discard.ipynb  quantinuum.sh  requirements.txt
Quantinuum/algorithm/: __init__.py  _bayesian_qpe.py  _circuits.py  _utils.py
Quantinuum/results_H1-1E/: beta_list.txt  k_list.txt  logical_result_13.json  logical_result_38.json  logical_result_5.json
Quantinuum/results_H1-1SC_16_10/: job_1_0.814316484368145.json  (+9 more)
aws/: README.md  braket-lab-2.ipynb
scripts/: Dockerfile.sh  anyon-ihpc.sh  anyon-sdt.sh  pawsey.sh  quantinuum.sh
(+2 files in other folders)
